[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/gohufont-uni-14.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="PauseText" type="Label" parent="."]
anchor_right = 1.0
margin_top = 192.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
uppercase = true

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 222.0
margin_right = 256.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 2 )
text = "QUIT >:("

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -82.0
margin_right = 256.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "RESUME"

[node name="LevelSelect" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 30.0
margin_right = 256.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "LEVEL SELECT"

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
